ListItem can contain actions

--- a/src/components/List/ListItem/styles.scss
+++ b/src/components/List/ListItem/styles.scss
@@ -1,11 +1,24 @@
 .root {
+  display: flex;
   background-color: #fff;
   line-height: 1.5rem;
   padding: 10px 20px;
   margin: 0;
   border-bottom: 1px solid #e0e0e0;
   
+  align-items: center;
+  
   &:last-child {
     border-bottom: 0;
+  }
+}
+
+.content {
+  flex: 1 0 auto;
+}
+
+.actions {
+  & > * + * {
+    margin-left: 5px;
   }
 }
