--- a/src/components/Input/styles.scss
+++ b/src/components/Input/styles.scss
@@ -27,6 +27,7 @@
   font-size: 1rem;
   cursor: text;
   transition: all .2s ease-out;
+  z-index: -1;
   &:after {
     display: block;
     content: "";
